# Office_Aquarium

./: .gitignore  ASSET_ATTRIBUTION.md  LICENSE  Office_Aquarium.html  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
docs/: BUILD_CERTIFICATION_PUBLIC_BETA_0.9.md  LONG_RUN_STRATEGY_MATRIX_REPORT_2026.md  OFFICE_AQUARIUM.md  OFFICE_AQUARIUM_CODEX_MASTER_SPEC.md  OFFICE_AQUARIUM_RELEASE_READINESS_AUDIT_2026-07-19.md  OFFICE_AQUARIUM_RELEASE_READINESS_AUDIT_2026-07-21.md  OFFICE_AQUARIUM_RELEASE_READINESS_RECHECK_2026-07-19.md  Office_Aquarium_Player_Guide_Release.md  Office_Aquarium_Player_Manual.md  PUBLIC_BETA_0.9_RELEASE_NOTES.md  RELEASE_HARDENING_WORKLOG_2026.md  SAVE_SIZE_AND_RECOVERY_REPORT_2026.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: Office_Aquarium_Failure_Test.html  ai-ownership-remediation-test.js  all-role-hiring-release-test.js  browser-smoke-test.js  communication-lifecycle-test.js  company-capability-portfolio-reaudit-test.js  conversation-presence-regression-test.js  crisis-regression-test.js  customer-product-exposure-regression-test.js  daily-pipeline-order-test.js  emotional-homeostasis-test.js  failure-test-page-test.js  hidden-state-access-regression-test.js  hiring-recommendation-test.js  institutional-learning-causality-test.js  long-run-balance-test.js  long-run-contract-test.js  loss-paths-crisis-test.js  market-valuation-regression-test.js  memo-context-test.js  message-recommendation-scoring-test.js  newspaper-clarity-test.js  operating-health-integrity-test.js  (+33 more)
(+43 files in other folders)
